# forklore

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  start.js
.github/: dependabot.yml
.github/workflows/: build.yml  docker.yml  lint.yml  release.yml  releases.yml  test.yml  tests.sh
client/: .dockerignore  .env  Dockerfile  README.md  components.json  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.app.tsbuildinfo  tsconfig.json  vite.config.ts
client/src/: App.tsx  api.ts  index.css  main.tsx  variables.css  variables.module.css
client/src/assets/: icon.ts
client/src/components/: AddRecipeForm.tsx  AddRecipeModal.tsx  Add_recipe.module.css  Add_recipe.tsx  Edit_recipe.tsx  Favorites.tsx  (+19 more)
server/: .dockerignore  .env  Cargo.toml  Dockerfile  package-lock.json  package.json  server.cjs  testapi.cjs
server/recipes/: recipes.json
server/src/: file_utils.rs  main.rs  routes.rs  server.cjs
server/src/modules/: add_recipe_api.rs  add_recipe_user.rs  delete_recipes.rs  edit_recipe.rs  fetch_recipes.rs  file_utils.rs  get_recipes.rs  ie_recipes.rs  mod.rs  saved_recipes.rs  search_api.rs
server/src/routes/: add_recipe_api.js  add_recipe_user.js  delete_recipe.js  edit_recipe.js  fetch_recipes.js  file_utils.js  search_recipe.js
src/: App.tsx
src/components/: Add_recipe.module.css  Add_recipe.tsx  Recipe_cards.tsx  header.css  header.module.css  header.tsx  qr_generator.tsx  recipe_card.tsx  recipe_cards.css  recipe_details.css  recipe_details.tsx
src/recipe/: recipes.json
(+23 files in other folders)
