[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.6"
actix-multipart = "0.7.2"
actix-web = "4.9.0"
futures = "0.3.30"
serde = { version="1.0.208", features=["derive"]}
serde_json = "1.0.125"
uuid = {version="1.10.0", features = [
    "v4",                
    "fast-rng"]}
